--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     </ul>
 
     <h2>📫 Contacto</h2>
-    <p>Correo: <a href="mailto:marcos.hernandez@email.com">marcos.hernandez@email.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/marcoshernandez" target="_blank">linkedin.com/in/marcoshernandez</a></p>
+    <p>Correo: <a href="mailto:marcos.hernandez80@email.com">marcos.hernandez80@email.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/marcoshernandezalvarez/" target="_blank">linkedin.com/in/marcoshernandezalvarez</a></p>
 
-    <a class="btn" href="mailto:marcos.hernandez@email.com">📨 Contáctame</a>
+    <a class="btn" href="mailto:marcos.hernandez80@email.com">📨 Contáctame</a>
   </div>
 </body>
 </html>
