--- a/index.html
+++ b/index.html
@@ -3,43 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Marcos Hernández - Desarrollador .NET</title>
+  <title>Marcos Hernández | Desarrollador .NET Senior</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; background: #f4f4f4; color: #333; }
-    .container { max-width: 800px; margin: auto; background: #fff; padding: 2rem; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    body { font-family: Arial, sans-serif; line-height: 1.6; max-width: 900px; margin: auto; padding: 20px; }
     h1, h2 { color: #2c3e50; }
+    ul { margin-left: 20px; }
     a { color: #2980b9; text-decoration: none; }
     a:hover { text-decoration: underline; }
-    .btn { display: inline-block; padding: 0.5rem 1rem; background: #3498db; color: white; border-radius: 5px; margin-top: 1rem; }
-    .btn:hover { background: #2980b9; }
+    hr { margin: 30px 0; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Marcos Hernández</h1>
-    <p>Desarrollador .NET Senior con más de 18 años de experiencia construyendo soluciones robustas, modernas y alineadas a las necesidades del negocio.</p>
 
-    <h2>💼 Servicios</h2>
-    <ul>
-      <li>Migración de ASP.NET a .NET Core</li>
-      <li>Migración de base de datos a Entity Framework</li>
-      <li>Desarrollo de APIs RESTful</li>
-      <li>Diseño de bases de datos</li>
-      <li>Integraciones y análisis de software</li>
-    </ul>
+  <h1>Marcos Hernández | Desarrollador .NET Senior</h1>
 
-    <h2>🔧 Herramientas</h2>
-    <ul>
-      <li>Control de versiones: Git, GitHub, GitLab</li>
-      <li>Flujos de trabajo: GitFlow (dev, qa, producción)</li>
-      <li>DevOps: Azure DevOps, GitHub Actions</li>
-    </ul>
+  <p>👋 ¡Hola! Soy <strong>Ingeniero en Informática</strong> con más de 5 años de experiencia formal reciente (y más de 18 años en total) desarrollando soluciones empresariales en tecnologías <strong>.NET</strong>.</p>
 
-    <h2>📫 Contacto</h2>
-    <p>Correo: <a href="mailto:marcos.hernandez80@gmail.com">marcos.hernandez80@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/marcoshernandezalvarez/" target="_blank">linkedin.com/in/marcoshernandezalvarez</a></p>
+  <p>Me especializo en desarrollo backend, modernización de sistemas y automatización de procesos, integrando prácticas DevOps y metodologías ágiles. Mi trabajo combina código limpio, visión técnica y enfoque en la eficiencia operativa. Actualmente me estoy proyectando hacia roles de <strong>Desarrollador .NET Senior</strong>, <strong>DevOps Azure Junior</strong> o <strong>Líder Técnico Junior</strong>.</p>
 
-    <a class="btn" href="mailto:marcos.hernandez80@gmail.com">📨 Contáctame</a>
-  </div>
+  <hr>
+
+  <h2>🚀 ¿Qué puedo hacer por ti?</h2>
+  <ul>
+    <li>🔄 Migración de aplicaciones <strong>ASP.NET a .NET Core / .NET 8</strong></li>
+    <li>🧱 Refactorización de código legacy y adopción de <strong>Entity Framework Core</strong></li>
+    <li>📡 Desarrollo de <strong>APIs RESTful</strong> seguras, escalables y bien documentadas</li>
+    <li>🧮 Diseño y optimización de <strong>bases de datos</strong> relacionales (SQL Server, PostgreSQL, MySQL, Oracle)</li>
+    <li>🔗 Integración de sistemas con OAuth 2.0, JWT, SOAP y REST</li>
+    <li>🧠 Análisis funcional y técnico de sistemas heredados con propuestas de rediseño</li>
+    <li>🚀 Automatización de despliegues en Azure, CI/CD con GitLab y GitHub Actions</li>
+  </ul>
+
+  <hr>
+
+  <h2>⚙️ Stack Técnico Actualizado</h2>
+  <ul>
+    <li><strong>Lenguajes:</strong> C#, T-SQL, JavaScript, Python (básico), Node.js (básico)</li>
+    <li><strong>Frameworks:</strong> .NET Core, .NET 8, ASP.NET MVC, Blazor, Bootstrap, React (básico)</li>
+    <li><strong>ORM:</strong> Entity Framework Core, ADO.NET, LINQ</li>
+    <li><strong>Bases de datos:</strong> SQL Server, PostgreSQL, Oracle, MySQL</li>
+    <li><strong>DevOps y Cloud:</strong> GitLab CI/CD, GitHub Actions, Docker, Kubernetes, Azure (en formación), GCP (experiencia)</li>
+    <li><strong>Herramientas:</strong> Git, GitHub, GitLab, Visual Studio 2022, VS Code, Postman, JIRA, GitHub Copilot</li>
+    <li><strong>Metodologías:</strong> Scrum, Kanban, Cultura DevOps</li>
+  </ul>
+
+  <p>🛠️ Flujo de trabajo con <strong>GitFlow</strong>: <code>feature</code>, <code>develop</code>, <code>release</code>, <code>hotfix</code>, <code>main</code></p>
+  <p>📦 Despliegues controlados en entornos <strong>DEV</strong>, <strong>QA</strong> y <strong>Producción</strong></p>
+
+  <hr>
+
+  <h2>📁 Portafolio</h2>
+  <p>Explora los proyectos publicados en este perfil para conocer ejemplos reales de:</p>
+  <ul>
+    <li>Estructura de soluciones .NET limpias y escalables</li>
+    <li>Integración de APIs externas</li>
+    <li>Automatización de flujos con CI/CD</li>
+    <li>Exportación de datos a Excel/PDF</li>
+    <li>Modernización de frontends y backends</li>
+  </ul>
+
+  <p>🔗 <a href="https://github.com/marcoshernandezti">github.com/marcoshernandezti</a></p>
+
+  <hr>
+
+  <h2>📫 Contacto</h2>
+  <ul>
+    <li>📧 <strong>Correo:</strong> marcos.hernandez80@email.com</li>
+    <li>💼 <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/marcoshernandezalvarez/">linkedin.com/in/marcoshernandezalvarez</a></li>
+    <li>🌍 Disponible para trabajo <strong>freelance remoto</strong> o en formato <strong>híbrido</strong> desde Chile</li>
+  </ul>
+
 </body>
 </html>
