--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     a:hover { text-decoration: underline; }
     hr { margin: 30px 0; }
   </style>
+
+  <!-- Bootstrap 5 CSS solo para el bloque de proyectos -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .proyecto:hover {
+      background-color: #f8f9fa;
+      border-left: 5px solid #0d6efd;
+      transition: 0.3s;
+    }
+  </style>
 </head>
 <body>
 
@@ -54,6 +64,31 @@
 
   <h2>📁 Portafolio</h2>
   <p>Explora los proyectos publicados en este perfil para conocer ejemplos reales de:</p>
+
+  <!-- BLOQUE DE PROYECTOS con Bootstrap -->
+  <div id="lista-proyectos">
+
+    <div class="proyecto p-3 mb-3 border rounded shadow-sm">
+      <h5>Gestión de Comunas y Regiones</h5>
+      <p class="mb-1">
+        Aplicación web en <strong>.NET 8</strong> con 3 capas (API REST, datos y MVC).
+        Permite listar regiones y crear/modificar comunas usando Entity Framework Core y procedimientos almacenados.
+      </p>
+      <a href="https://github.com/marcoshernandezti/gestion-comunas-regiones" target="_blank" class="btn btn-sm btn-primary">Ver repositorio</a>
+    </div>
+
+    <div class="proyecto p-3 mb-3 border rounded shadow-sm">
+      <h5>Buscador de Datos XML</h5>
+      <p class="mb-1">
+        Aplicación <strong>.NET 8</strong> que consulta datos desde un archivo XML y los muestra en una grilla paginada.
+        Usa Entity Framework Core y se integrará con GitHub Actions para CI/CD.
+      </p>
+      <a href="https://github.com/marcoshernandezti/buscador-xml" target="_blank" class="btn btn-sm btn-primary">Ver repositorio</a>
+    </div>
+
+  </div>
+
+  <!-- Listado original -->
   <ul>
     <li>Estructura de soluciones .NET limpias y escalables</li>
     <li>Integración de APIs externas</li>
@@ -73,5 +108,15 @@
     <li>🌍 Disponible para trabajo <strong>freelance remoto</strong> o en formato <strong>híbrido</strong> desde Chile</li>
   </ul>
 
+  <!-- Bootstrap y jQuery para animación -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("#lista-proyectos .proyecto").hide().each(function (i) {
+        $(this).delay(i * 300).fadeIn(500);
+      });
+    });
+  </script>
 </body>
 </html>
