--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
   <title>Marcos Hernández | Desarrollador .NET Senior</title>
   <style>
     body { font-family: Arial, sans-serif; line-height: 1.6; max-width: 900px; margin: auto; padding: 20px; }
-    h1, h2 { color: #2c3e50; }
+    h1, h2 { color: #2c3e50; cursor: pointer; }
     ul { margin-left: 20px; }
     a { color: #2980b9; text-decoration: none; }
     a:hover { text-decoration: underline; }
     hr { margin: 30px 0; }
   </style>
-
-  <!-- Bootstrap 5 CSS solo para el bloque de proyectos -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .proyecto:hover {
-      background-color: #f8f9fa;
-      border-left: 5px solid #0d6efd;
-      transition: 0.3s;
-    }
-  </style>
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("#toggle-habilidades").click(function () {
+        $("#habilidades-lista").slideToggle();
+      });
+    });
+  </script>
 </head>
 <body>
 
@@ -31,10 +30,10 @@
 
   <p>Me especializo en desarrollo backend, modernización de sistemas y automatización de procesos, integrando prácticas DevOps y metodologías ágiles. Mi trabajo combina código limpio, visión técnica y enfoque en la eficiencia operativa. Actualmente me estoy proyectando hacia roles de <strong>Desarrollador .NET Senior</strong>, <strong>DevOps Azure Junior</strong> o <strong>Líder Técnico Junior</strong>.</p>
 
-  <hr>
+ <hr>
 
-  <h2>🚀 ¿Qué puedo hacer por ti?</h2>
-  <ul>
+  <h2 id="toggle-habilidades">🚀 ¿Qué puedo hacer por ti?</h2>
+  <ul id="habilidades-lista" style="display: none;">
     <li>🔄 Migración de aplicaciones <strong>ASP.NET a .NET Core / .NET 8</strong></li>
     <li>🧱 Refactorización de código legacy y adopción de <strong>Entity Framework Core</strong></li>
     <li>📡 Desarrollo de <strong>APIs RESTful</strong> seguras, escalables y bien documentadas</li>
@@ -62,44 +61,23 @@
 
   <hr>
 
-  <h2>📁 Portafolio</h2>
-  <p>Explora los proyectos publicados en este perfil para conocer ejemplos reales de:</p>
-
-  <!-- BLOQUE DE PROYECTOS con Bootstrap -->
-  <div id="lista-proyectos">
-
-    <div class="proyecto p-3 mb-3 border rounded shadow-sm">
-      <h5>Gestión de Comunas y Regiones</h5>
-      <p class="mb-1">
-        Aplicación web en <strong>.NET 8</strong> con 3 capas (API REST, datos y MVC).
-        Permite listar regiones y crear/modificar comunas usando Entity Framework Core y procedimientos almacenados.
-      </p>
-      <a href="https://github.com/marcoshernandezti/gestion-comunas-regiones" target="_blank" class="btn btn-sm btn-primary">Ver repositorio</a>
-    </div>
-
-    <div class="proyecto p-3 mb-3 border rounded shadow-sm">
-      <h5>Buscador de Datos XML</h5>
-      <p class="mb-1">
-        Aplicación <strong>.NET 8</strong> que consulta datos desde un archivo XML y los muestra en una grilla paginada.
-        Usa Entity Framework Core y se integrará con GitHub Actions para CI/CD.
-      </p>
-      <a href="https://github.com/marcoshernandezti/buscador-xml" target="_blank" class="btn btn-sm btn-primary">Ver repositorio</a>
-    </div>
-
-  </div>
-
-  <!-- Listado original -->
+  <h2>📁 Portafolio personales en desarrollo:</p>
   <ul>
-    <li>Estructura de soluciones .NET limpias y escalables</li>
-    <li>Integración de APIs externas</li>
-    <li>Automatización de flujos con CI/CD</li>
-    <li>Exportación de datos a Excel/PDF</li>
-    <li>Modernización de frontends y backends</li>
+    <li>
+      <strong>Sistema de Gestión de Comunas</strong>  
+      (<a href="https://github.com/marcoshernandezti/ProyectoComunas" target="_blank">ver repositorio</a>):  
+      solución en .NET 8 con arquitectura en tres capas (Datos, API REST y Web MVC). Permite listar regiones y comunas de Chile, con funcionalidades para crear y modificar comunas. Utiliza Entity Framework Core y procedimientos almacenados.
+    </li>
+    <li>
+      <strong>Buscador con Paginación desde XML</strong>  
+      (<a href="https://github.com/marcoshernandezti/ProyectoPaginacion" target="_blank">ver repositorio</a>):  
+      aplicación en .NET 8 (próxima a separar en capas) que consume datos desde un archivo XML. Implementa paginación, grilla de resultados y uso de Entity Framework Core. Planea incorporar GitHub Actions para automatizar despliegues.
+    </li>
   </ul>
 
   <p>🔗 <a href="https://github.com/marcoshernandezti">github.com/marcoshernandezti</a></p>
 
-  <hr>
+   <hr>
 
   <h2>📫 Contacto</h2>
   <ul>
@@ -108,15 +86,5 @@
     <li>🌍 Disponible para trabajo <strong>freelance remoto</strong> o en formato <strong>híbrido</strong> desde Chile</li>
   </ul>
 
-  <!-- Bootstrap y jQuery para animación -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $("#lista-proyectos .proyecto").hide().each(function (i) {
-        $(this).delay(i * 300).fadeIn(500);
-      });
-    });
-  </script>
 </body>
 </html>
