--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <hr>
 
-  <h2>📁 Portafolio personales en desarrollo:</p>
+  <h2>📁 Portafolio personales en desarrollo:</h2>
   <ul>
     <li>
       <strong>Sistema de Gestión de Comunas</strong>  
