--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <p>👋 ¡Hola! Soy <strong>Ingeniero en Informática</strong> con más de 5 años de experiencia formal reciente (y más de 18 años en total) desarrollando soluciones empresariales en tecnologías <strong>.NET</strong>.</p>
 
-  <p>Me especializo en desarrollo backend, modernización de sistemas y automatización de procesos, integrando prácticas DevOps y metodologías ágiles. Mi trabajo combina código limpio, visión técnica y enfoque en la eficiencia operativa. Actualmente me estoy proyectando hacia roles de <strong>Desarrollador .NET Senior</strong>, <strong>DevOps Azure Junior</strong> o <strong>Líder Técnico Junior</strong>.</p>
+  <p>Me especializo en desarrollo backend, modernización de sistemas y automatización de procesos, integrando prácticas DevOps y metodologías ágiles. Mi trabajo combina código limpio, visión técnica y enfoque en la eficiencia operativa. Actualmente me estoy proyectando hacia roles de <strong>DevOps Azure Junior</strong> o <strong>Líder Técnico Junior</strong>.</p>
 
  <hr>
 
