--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 </head>
 <body>
 
+  <h1>Marcos Hernández | Desarrollador .NET Senior</h1>
+  
   <p>👋 ¡Hola! Soy <strong>Ingeniero en Informática</strong> con más de 5 años de experiencia en desarrollo backend con tecnologías <strong>.NET</strong>, y actualmente me encuentro en transición hacia el mundo <strong>cloud y full stack</strong>.</p>
 
   <p>Estoy ampliando mi stack con <strong>Node.js</strong> y <strong>React</strong>, y he trabajado con <strong>Google Cloud Platform</strong> desarrollando funciones serverless con Python, integradas a backend Java y desplegadas en entornos controlados. Mi enfoque combina experiencia backend, visión técnica, análisis funcional y una fuerte orientación a la evolución tecnológica continua.</p>
