--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <ul>
     <li>📧 <strong>Correo:</strong> marcos.hernandez80@email.com</li>
     <li>💼 <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/marcoshernandezalvarez/">linkedin.com/in/marcoshernandezalvarez</a></li>
-    <li>🌍 Disponible para trabajo <strong>freelance remoto</strong> o en formato <strong>híbrido</strong> desde Chile</li>
+    <li>🌍 <strong>Ubicación:</strong> Santiago, Chile — Disponible para trabajar en modalidad presencial, híbrida o remota</li>
   </ul>
 
 </body>
