--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     const originalHabilidadesHtml = $("#habilidades-lista").html();
     const originalStackHtml = $("#stack-lista").html();
     const originalPortafolioHtml = $("#portafolio-lista").html();
+    const originalInicioHtml = $("#inicio-lista").html();
 
     if (clickCountHabilidades === 1) {
 	clickCountHabilidades++;
@@ -63,6 +64,25 @@
 
     if (clickCountPortafolio === 1) {
         clickCountPortafolio++;
+	const textContent = $("#inicio-lista").text();
+        const lines = originalInicioHtml.match(/<p>.*?<\/p>/g) || [];
+        $("#inicio-lista").html("").show();
+
+        // Simular el efecto de tipeo línea por línea
+        let i = 0;
+        function typeLine() {
+          if (i < lines.length) {
+            $("<p></p>").html(lines[i].replace(/<\/?p>/g, "")).appendTo("#inicio-lista");
+            i++;
+            setTimeout(typeLine, 150); // Velocidad de tipeo
+          }
+        }
+        typeLine();
+
+    }
+
+    if (clickCountPortafolio === 1) {
+        clickCountPortafolio++;
 	const textContent = $("#portafolio-lista").text();
         const lines = originalPortafolioHtml.match(/<li>.*?<\/li>/g) || [];
         $("#portafolio-lista").html("").show();
@@ -78,7 +98,7 @@
         }
         typeLine();
 
-    }
+    }	  
 
     $("#toggle-habilidades").click(function () {
       $("#habilidades-lista").slideToggle();
@@ -98,10 +118,11 @@
 <body>
 
   <h1>Marcos Hernández | Desarrollador .NET Senior</h1>
-  
-  <p>👋 ¡Hola! Soy <strong>Ingeniero en Informática</strong> con más de 5 años de experiencia en desarrollo backend con tecnologías <strong>.NET</strong>, y actualmente me encuentro en transición hacia el mundo <strong>cloud y full stack</strong>.</p>
-
-  <p>Estoy ampliando mi stack con <strong>Node.js</strong> y <strong>React</strong>, y he trabajado con <strong>Google Cloud Platform</strong> desarrollando funciones serverless con Python, integradas a backend Java y desplegadas en entornos controlados. Mi enfoque combina experiencia backend, visión técnica, análisis funcional y una fuerte orientación a la evolución tecnológica continua.</p>
+	
+  <div id="inicio-lista">
+	<p>👋 ¡Hola! Soy <strong>Ingeniero en Informática</strong> con más de 5 años de experiencia en desarrollo backend con tecnologías <strong>.NET</strong>, y actualmente me encuentro en transición hacia el mundo <strong>cloud y full stack</strong>.</p>
+	<p>Estoy ampliando mi stack con <strong>Node.js</strong> y <strong>React</strong>, y he trabajado con <strong>Google Cloud Platform</strong> desarrollando funciones serverless con Python, integradas a backend Java y desplegadas en entornos controlados. Mi enfoque combina experiencia backend, visión técnica, análisis funcional y una fuerte orientación a la evolución tecnológica continua.</p>	  
+  </div>  
 
  <hr>
 
@@ -134,7 +155,7 @@
 
   <hr>
 
-  <h2 id="toggle-Portafolio">📁 Portafolio personales en desarrollo:</h2>
+  <h2 id="toggle-portafolio">📁 Portafolio personales en desarrollo:</h2>
   <ul id="portafolio-lista" style="display: none;">
     <li>
       <strong>Sistema de Gestión de Comunas</strong>  
