mejora en seccion contacto

--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
     </ul>
   </div>
 
+  <!-- Sección de contacto con LinkedIn destacado -->
+  <div class="section text-center">
+    <h2 class="section-title">📫 Contacto</h2>
+    <a href="https://www.linkedin.com/in/marcoshernandezalvarez/" target="_blank" class="btn btn-outline-primary btn-lg">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" style="width: 20px; margin-right: 8px;">
+      Visita mi perfil en LinkedIn
+    </a>
+  </div>
+
   <!-- Footer -->
   <footer>
     <p>
