Actualización de stack

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <li>Migración de sistemas legados a arquitecturas modernas</li>
       <li>Diseño de APIs RESTful y microservicios</li>
       <li>Optimización de bases de datos y procedimientos almacenados</li>
-      <li>Integraciones con servicios cloud (GCP, Azure, Apigee)</li>
+      <li>Integraciones con servicios cloud (GCP, Azure)</li>
     </ul>
   </div>
 
